[package]
name = "fff"
version = "1.0.0"
authors = ["Roman Kvasnytskyi <roman@kvasnytskyi.net>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
futures = "0.3.30"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["rustls-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
hex = "0.4.3"
once_cell = "1.19.0"
twoway = "0.2"
colored = "2.1.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
bytes = "1.7.2"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.12.0"
predicates = "3.1.2"
httpmock = "0.6.8"
tokio = { version = "1.40.0", features = ["full"] }  # For async tests

[[bin]]
name = "fff"
path = "src/main.rs"
bench = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
